# fs-native-extensions

./: .clang-format  .gitignore  CMakeLists.txt  README.md  binding.c  binding.gyp  binding.js  index.js  macros.h  package.json  test.js  test.mjs
.github/workflows/: prebuild.yml  test.yml
include/: fs-ext.h
src/: apple.c  freebsd.c  linux.c  mac.c  platform.h  posix.c  shared.c  win.c  win32.c
src/win/: nt.h
test/: all.mjs  attr.js  attr.mjs  helpers.js  helpers.mjs  lock.js  lock.mjs  swap.js  swap.mjs  trim.js  trim.mjs
test/fixture/: lock.js  lock.mjs
